# DJ_ecom_combo_backup_db

./: pyproject.toml  requirements.txt  separate_db.sqlite3
combo_db/: apps.py  models.py
combo_gui/: apps.py  config.py  database.py
config/: settings.py
