[project]
name = "gamestore-combo-db"
version = "0.1.0"
description = "This is the test backup db for postgres in a gamestore project"
authors = [
    {name = "Mustafa Prodhan",email = "mufassagit@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
